svg logo instead of png.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="small-12 medium-4 columns">
             <div class="site-title">
                 <div class="site-logo">
-                    <a href="{{ site.baseurl }}/"><img src="/images/logo.png"></a>
+                    <a href="{{ site.baseurl }}/"><img src="/images/logo.svg"></a>
                 </div>
                 <div class="site-text">
                     <a href="{{ site.baseurl }}/"><span>
