--- a/scss/_graybike.scss
+++ b/scss/_graybike.scss
@@ -30,7 +30,10 @@ a:hover {
     height: 93px;
     overflow: hidden;
     .site-logo {
-      margin-top: -10px;
+      // margin-top: -10px;
+      img {
+        height: 93px;
+      }
     }
     .site-text {
       padding-top: 20px;
@@ -42,7 +45,7 @@ a:hover {
     border: none;
   }
   &:hover .site-logo {
-    margin-top: -126px;
+    margin-top: -106px;
   }
   span, span:hover {
     border-top: rem-calc(10) solid $gray_b1;
