update true currency info

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,5 +10,5 @@
   <p>Interested in working together? <a href="/#hire">Let's Talk.</a> Of course, you can always get in touch directly by emailing us at <a href="mailto:hello@graybike.co">hello@graybike.co</a> or calling us at: 415.326.3397. We'd love to hear from you.</p>
 
   <h6 class="section-subheader">ABOUT PAVAN</h6>
-  <p>Pavan has over 8 years of experience building things for the web and mobile. In addition to building things at Gray Bike, he is co-founder and chief technologist of <a href="http://truecurrency.com">True Currency</a>, a site which helps travelers save money when shopping abroad. He also mentors students learning front-end web development at <a href="http://thinkful.com/" target="_blank">Thinkful</a>.</p>
+  <p>Pavan has over 8 years of experience building things for the web and mobile. In addition to building things at Gray Bike, he is co-founder and chief technologist of <a href="http://truecurrency.com">True Currency</a>, a site global brands price products across currencies. He also mentors students learning front-end web development at <a href="http://thinkful.com/" target="_blank">Thinkful</a>.</p>
 </div>
