better deploy & text

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,15 +6,14 @@ title: GRAY BIKE | At The Shop
   .row
     .col-xs-12.text-center
       = image_tag 'logo.svg', width: '200', alt:'Gray Bike'
-      %h1 GRAY BIKE
       
-  .row
-    .col-xs-12.col-sm-10.col-sm-offset-1.col-md-6.col-md-offset-3.text-center
-      %h4 Gray Bike is a small software engineering & design consultancy in San Francsico, California.
-  .row.mt-md
+  .row.mt-lg
     .col-xs-12.col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
-      %p 
-        We're at the shop getting a tune-up, but we'd still love to hear from you. Feel free to call us ( 415 326 3397 ) or email us (
-        %a{href:"mailto:hello@graybike.co"}
-          hello@graybike.co
-        ).
+      %h2 Gray Bike is a small software engineering & design consultancy in San Francsico, California.
+  .row.mt-sm
+    .col-xs-12.col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
+      %h3 
+        We're at the shop getting a tune-up, but we'd still love to hear from you.
+      %p.mt-lg
+        415 326 3397 //
+        %a{href:"mailto:hello@graybike.co"} hello@graybike.co
