--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -6,14 +6,18 @@ body {
   color: $gray;
 }
 
-h1, h4 {
+h1, h2 {
   font-family: "Roboto Slab", serif;
   font-weight: 300;
 }
-h1 {
-  
-  font-size: 52px;
+
+h3 {
+  font-weight: 200;
 }
+// h1 {
+  
+//   font-size: 52px;
+// }
 
 p {
   font-size: 17px;
