add margin to bottom

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,7 +2,7 @@
 title: GRAY BIKE | At The Shop
 ---
 
-.container.mt-xl
+.container.mt-xl.mb-xl
   .row
     .col-xs-12.text-center
       = image_tag 'logo.svg', width: '200', alt:'Gray Bike'
