--- a/source/stylesheets/base/_utilities.scss
+++ b/source/stylesheets/base/_utilities.scss
@@ -17,3 +17,23 @@
 .mt-xl {
   margin-top: spc(xlarge);
 }
+
+.mb-sm {
+  margin-bottom: spc(small);
+}
+
+.mb-md {
+  margin-bottom: spc(medium);
+}
+
+.mb-lg {
+  margin-bottom: spc(large);
+}
+
+.mb-lg {
+  margin-bottom: spc(large);
+}
+
+.mb-xl {
+  margin-bottom: spc(xlarge);
+}
