--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -15,5 +15,5 @@ title: GRAY BIKE | At The Shop
       %h3 
         We're at the shop getting a tune-up, but we'd still love to hear from you.
       %p.mt-lg
-        415 326 3397 //
-        %a{href:"mailto:hello@graybike.co"} hello@graybike.co
+        =precede "(415) 326 3397 // " do
+          %a{href:"mailto:hello@graybike.co"} hello@graybike.co
