--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,7 +9,7 @@ title: Gray Bike | Software & Design Consulting
       
   .row.mt-lg
     .col-xs-12.col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
-      %h2 Gray Bike is a small software engineering & design consultancy in San Francsico, California.
+      %h2 Gray Bike is a small software engineering & design consultancy in San Francisco, California.
   .row.mt-sm
     .col-xs-12.col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
       %h3 
