--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,12 +1,66 @@
-$gray: #767676;
-$gray_b1: #A5A5A5;
+// Font families
+$sans-serif: 'Source Sans Pro', sans-serif;
+$serif: 'Roboto Slab', serif;
+
+// Typography
+$base-font-family: $sans-serif;
+$heading-font-family: 'Roboto Slab', $base-font-family;
+
+// Font Sizes
+$base-font-size: 1em;
+
+// Line height
+$base-line-height: 1.5;
+$heading-line-height: 1.2;
+
+// Other Sizes
+$base-border-radius: 3px;
+$base-spacing: $base-line-height * 1em;
+$small-spacing: $base-spacing / 2;
+$base-z-index: 0;
+
+$base-padding-block: em(15);
+
+// Colors http://paletton.com/palette.php?uid=13n0u0k5vBR0vWY2tNB9wtQeAoY
+$blue-d2: #45717B;
+$blue-d1: #6A8990;
+$blue: #95ADB3;
+$blue-b1: #C5D0D2;
+$blue-b2: #EFF2F3;
+
+
+$white: #FFFFFF;
+
+
+//Non-blue Colors
+$pastel-brown: #BDCC97;
 
 
 
-$spacing: (
-  xsmall: 7px,
-  small: 14px,
-  medium: 28px,
-  large: 42px,
-  xlarge: 56px
-);
+
+$dark-gray: #333;
+$light-gray: #ddd;
+
+// Font Colors
+$base-font-color: $dark-gray;
+$action-color: darken($blue,10%);
+
+// Border
+$base-border-color: $light-gray;
+$base-border: 1px solid $base-border-color;
+
+// Background Colors
+$base-background-color: #fff;
+$secondary-background-color: tint($base-border-color, 75%);
+
+// Forms
+$form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
+$form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
+
+// Animations
+$base-duration: 150ms;
+$base-timing: ease;
+
+
+// Navigation Height
+$navbar-height: 6em;
