add call to action at bottom

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -8,3 +8,6 @@ title: Gray Bike | Software & Design Consulting
       .intro
         = image_tag 'logo.svg', alt:'Gray Bike'
         %h1 Gray Bike is a small software and user experience consultancy in San Francisco, California.
+
+    .fixed--bottom
+      %h2 FIND OUT MORE
