--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -15,7 +15,7 @@
 // Base
 @import "graybike/base/typography";
 @import "graybike/base/base";
-
+@import "graybike/base/utilities";
 
 // Pages
 @import "graybike/pages/landing";
