--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -1,4 +1,4 @@
-.landing {
+article.type-system-slab.landing {
   height: 100%;
   .hero {
     width: 100%;
@@ -21,5 +21,10 @@
       margin-top: padding-blocks(1);  
       text-align: left;
     }
+  }
+
+  h2 {
+    font-weight: 700;
+    letter-spacing: em(1.5);
   }
 }
