--- a/source/stylesheets/base/_grid-settings.scss
+++ b/source/stylesheets/base/_grid-settings.scss
@@ -10,5 +10,5 @@
 $medium-screen: 600px;
 $large-screen: 900px;
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+$mobile: new-breakpoint(max-width $medium-screen);
+$tablet: new-breakpoint(max-width $large-screen);
