--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,28 +4,17 @@ title: Gray Bike | Software & Design Consulting
 
 %article.landing.type-system-slab
   .hero
-    %section
-      .intro
-        = image_tag 'logo.svg', alt:'Gray Bike'
-        %h1 Gray Bike is a small software and user experience consultancy in San Francisco, California.
-        .cta
-          .half
-            %a{href: "#"}
-              %h2 GET IN TOUCH
-          .half
-            %a{href: "#learnmore"}
-              %h2 FIND OUT MORE
+    %section.intro
+      %h1 Gray Bike is a small software and user experience consultancy based in San Francisco, California.
+      = image_tag 'logo.svg', alt:'Gray Bike'
+      .cta
+        .half
+          %a{href: "#"}
+            %h2 GET IN TOUCH
+        .half
+          %a{href: "#learnmore"}
+            %h2 FIND OUT MORE
   %section#learnmore.main
     .description
-      %h3 Here's some more stuff.
-%script{ src: "//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js" }
-
-:javascript
-    // Bind to the click of all links with a #hash in the href
-  $('a[href^="#"]').click(function(e) {
-    // Prevent the jump and the #hash from appearing on the address bar
-    e.preventDefault();
-    // Scroll the window, stop any previous animation, stop on user manual scroll
-    // Check https://github.com/flesler/jquery.scrollTo for more customizability
-    $(window).stop(true).scrollTo(this.hash, {duration:1000, interrupt:true});
-  });
+      %h2.text-center I work with startups and small businesses.
+      %p I've helped a number of startups and businesses take their ideas from start to finish. I can either put together the right team to complete your project, or I can work with and augment your team.
