--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -17,6 +17,21 @@
   %body{:class => page_classes}
     = yield
 
+    %script{ src: "https://code.jquery.com/jquery-1.11.3.min.js" }
+    %script{ src: "//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js" }
+    :javascript
+      $(document).ready(function() {
+        // Bind to the click of all links with a #hash in the href
+        $('a[href^="#"]').click(function(e) {
+          // Prevent the jump and the #hash from appearing on the address bar
+          e.preventDefault();
+          // Scroll the window, stop any previous animation, stop on user manual scroll
+          // Check https://github.com/flesler/jquery.scrollTo for more customizability
+          $(window).stop(true).scrollTo(this.hash, {duration:1000, interrupt:true});
+        });
+      });
+
+    / Google Analytics
     :javascript
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
