--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -6,60 +6,72 @@ article.type-system-slab.landing {
     background-color: $medium-blue;
     color: $white;
     height: calc(100%);
-    section {
+
+    .intro {
       @include vertical-align();
-    }
-  }
-
-  .intro {
-    text-align: center;
-    img {
-      max-width: em(200);
-      margin: auto;
-
-      @include media($mobile) {
-        max-width: em(100);
-      }
-    } 
-    h1 {
-      font-weight: 200;
-      margin-top: padding-blocks(1);  
-      text-align: left;
-    }
-
-    .cta {
+      text-align: center;
       
-      margin-top: padding-blocks(4);
-      @include span-columns(8);
-      @include shift(2);
+      img {
 
-      @include media($tablet) {
         @include fill-parent();
-        @include shift(0);
+        max-width: em(200);
+        
+        margin: auto;
+        margin-top: padding-blocks(1);  
+
+        @include media($mobile) {
+          max-width: em(100);
+        }
       }
 
+      h1 {
+        font-weight: 300;
+        text-align: left;
+        @include span-columns(10);
+        @include shift(1);
+      }
+
+      .cta {
+        
+        margin-top: padding-blocks(5);
+        @include span-columns(8);
+        @include shift(2);
+
+        @include media($tablet) {
+          margin-top: padding-blocks(3);
+          @include fill-parent();
+          @include shift(0);
+        }
+
+        @include media($mobile) {
+          margin-top: padding-blocks(1);
+        }
+
+      }
+
+      .half {
+        @include span-columns(4 of 8);
+        &:last-child {
+          @include omega();
+        }
+
+        @include media($mobile) {
+          @include fill-parent();
+          // margin-bottom: padding-blocks(1);
+        }
+      }
     }
 
-    .half {
-      @include span-columns(4 of 8);
-      &:last-child {
-        @include omega();
-      }
-
-      @include media($mobile) {
-        @include fill-parent();
-        margin-bottom: padding-blocks(1);
-      }
+    h2 {
+      color: #fff;
+      font-weight: 700;
+      letter-spacing: em(1.5);
     }
   }
-
-  h2 {
-    color: #fff;
-    font-weight: 700;
-    letter-spacing: em(1.5);
-  }
-
-  .main {
-
+  .description {
+    padding-top: padding-blocks(3);
+    padding-bottom: padding-blocks(3);
+    @include span-columns(10);
+    @include shift(1);
   }
 }
