--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -16,6 +16,7 @@
 @import "graybike/base/typography";
 @import "graybike/base/base";
 @import "graybike/base/utilities";
+@import "graybike/base/nav";
 
 // Pages
 @import "graybike/pages/landing";
