--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,3 +1,7 @@
+// Font families
+$sans-serif: 'Source Sans Pro', sans-serif;
+$serif: 'Roboto Slab', serif;
+
 // Typography
 $base-font-family: $helvetica;
 $heading-font-family: 'Roboto Slab', $base-font-family;
@@ -18,9 +22,15 @@ $base-z-index: 0;
 $base-padding-block: em(15);
 
 // Colors http://paletton.com/palette.php?uid=13n0u0k5vBR0vWY2tNB9wtQeAoY
-$medium-blue: #6A8990;
-$light-blue: #C5D0D2;
+$blue-d2: #45717B;
+$blue-d1: #6A8990;
+
+$blue-b1: #C5D0D2;
+$blue-b2: #EFF2F3;
+
 $white: #FFFFFF;
+
+
 
 $blue: #477dca;
 $dark-gray: #333;
