--- a/source/stylesheets/graybike/base/_base.scss
+++ b/source/stylesheets/graybike/base/_base.scss
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: $light-blue;
+  background-color: $blue-b2;
 }
 
 body {
