--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -11,7 +11,7 @@
 
     / Use title if it's in the page YAML frontmatter
     %title= current_page.data.title || "GRAY BIKE"
-    %link{href:'http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700&Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300', rel:'stylesheet', type:'text/css'}
+    %link{href:'http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700&Source+Sans+Pro:400,300,600', rel:'stylesheet', type:'text/css'}
     = stylesheet_link_tag "all"
     = javascript_include_tag  "all"
   %body{:class => page_classes}
