update structure of landing page

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,10 +7,9 @@ title: Gray Bike | Software & Design Consulting
     = partial "partials/nav"
     %section.logo.text-center
       = image_tag 'logo.svg', alt:'Gray Bike'
-    %section.description
+    %section
       %h1
         %span Gray Bike is a small software consultancy based in San Francisco, California.
-  %section#learnmore.main
-    .description
-      %h2.text-center I work with startups and small businesses.
-      %p I've helped a number of startups and businesses take their ideas from start to finish. I can either put together the right team to complete your project, or I can work with and augment your team.
+  %section.description
+    %h1.text-center I work with startups and small businesses.
+    %p I've helped a number of startups and businesses take their ideas from start to finish. I can either put together the right team to complete your project, or I can work with and augment your team.
