remove attachment to typography

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,14 +2,14 @@
 title: Gray Bike | Software & Design Consulting
 ---
 
-%article.landing.type-system-slab
+%article.landing
   .hero
     = partial "partials/nav"
     %section.logo.text-center
       = image_tag 'logo.svg', alt:'Gray Bike'
-    %section
+    %section.type-system-slab
       %h1
         %span Gray Bike is a small software consultancy based in San Francisco, California.
-  %section.description
+  %section.description.type-system-slab
     %h1.text-center I work with startups and small businesses.
     %p I've helped a number of startups and businesses take their ideas from start to finish. I can either put together the right team to complete your project, or I can work with and augment your team.
