--- a/source/partials/_nav.html.haml
+++ b/source/partials/_nav.html.haml
@@ -1,6 +1,9 @@
 %header
   %div
-    %h2 GRAY BIKE 
+    %h2
+      %span
+        = succeed "BIKE" do
+          %span.dg GRAY
   %nav
     %a WORK
     %a WORDS
