--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -24,7 +24,7 @@ $base-padding-block: em(15);
 // Colors http://paletton.com/palette.php?uid=13n0u0k5vBR0vWY2tNB9wtQeAoY
 $blue-d2: #45717B;
 $blue-d1: #6A8990;
-
+$blue: #95ADB3;
 $blue-b1: #C5D0D2;
 $blue-b2: #EFF2F3;
 
@@ -32,7 +32,7 @@ $white: #FFFFFF;
 
 
 
-$blue: #477dca;
+
 $dark-gray: #333;
 $light-gray: #ddd;
 
