--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -32,11 +32,16 @@ header {
     }
   }
 
-  h2 {
+  h2 a {
     height: 100%;
     font-size: 2.5em;
     font-family: $sans-serif;
+    color: $blue-b2;
     font-weight: 600;
+    &:hover {
+      color: $blue-b2;
+      cursor: pointer;
+    }
     &::before {
       content: '';
       display: inline-block;
