--- a/source/partials/_nav.html.haml
+++ b/source/partials/_nav.html.haml
@@ -5,7 +5,10 @@
         = succeed "BIKE" do
           %span.dg GRAY
   %nav
-    %a WORK
-    %a WORDS
-    %a HIRE
+    %a
+      %span WORK
+    %a
+      %span WORDS
+    %a
+      %span HIRE
   %hr
