--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -4,7 +4,7 @@ article.landing {
 
   .hero {
     width: 100%;
-    background-color: darken($blue-d2,13%);
+    background-color: $blue-d2;
     // background-color: #313E42;
     color: $white;
     height: calc(100%);
