--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -31,7 +31,10 @@ header {
       height: 100%;
     }
   }
-
+  
+  h2 {
+    margin: 0;
+  }
   h2 a {
     height: 100%;
     font-size: 2.5em;
@@ -100,7 +103,7 @@ nav a {
   }
 }
 nav a span {
-  // padding: 8px 0;
+  padding: 8px 0;
   position: relative;
 }
 nav a span:after {
@@ -109,7 +112,7 @@ nav a span:after {
   left: 0;
   width: 100%;
   height: 4px;
-  background: $blue-d2;
+  background: $blue-b1;
   content: '';
   opacity: 0;
   -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
