better background pattern

--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -3,7 +3,7 @@ $sans-serif: 'Source Sans Pro', sans-serif;
 $serif: 'Roboto Slab', serif;
 
 // Typography
-$base-font-family: $helvetica;
+$base-font-family: $sans-serif;
 $heading-font-family: 'Roboto Slab', $base-font-family;
 
 // Font Sizes
