complete homepage overhaul

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,11 +5,23 @@ title: Gray Bike | Software & Design Consulting
 %article.landing
   .hero
     = partial "partials/nav"
-    %section.logo.text-center
-      = image_tag 'logo.svg', alt:'Gray Bike'
-    %section.type-system-slab
-      %h1
-        %span Gray Bike is a small software consultancy based in San Francisco, California.
+
+    %section.type-system-slab.hero-text
+
+      %h1 Gray Bike is a small software consultancy based in San Francisco, California. We use technology to help small businesses, nonprofits, and startups improve.
+    
+
+      .find-out-more.text-center
+        %a{href: "#graybike-overview"}
+          = image_tag 'icons/down-arrow-circle-outline.svg', alt: 'Find out more', class: 'outline'
+          = image_tag 'icons/down-arrow-circle-filled.svg', alt: 'Find out more', class: 'filled'
+
   %section.description.type-system-slab
-    %h1.text-center I work with startups and small businesses.
+    %h1.text-center#graybike-overview I work with startups and small businesses.
     %p I've helped a number of startups and businesses take their ideas from start to finish. I can either put together the right team to complete your project, or I can work with and augment your team.
+
+    %p Lorizzle ipsizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle sit the bizzle, fo shizzle mah nizzle fo rizzle, mah home g-dizzle adipiscing cool. Nullam sapien velit, funky fresh hizzle, suscipizzle dawg, gravida you son of a bizzle, nizzle. Pellentesque eget tortor. Sizzle eros. Fusce izzle hizzle dapibizzle stuff tempizzle dizzle. Mauris fo that's the shizzle izzle izzle. Vestibulum izzle tortizzle. Ghetto eleifend rhoncizzle nisi. In hac habitasse platea dictumst. Donec dapibus. Yo tellizzle mammasay mammasa mamma oo sa, pretizzle eu, izzle ac, eleifend vitae, nunc. Bizzle suscipizzle. Integizzle owned velit sed break it down.
+
+    %p Sizzle metizzle urna, we gonna chung et, shiznit izzle, sollicitudin break yo neck, yall, nulla. Ma nizzle pharetra, yippiyo break it down facilisis dawg, neque justo get down get down velizzle, things fringilla libero break yo neck, yall izzle cool. Uhuh ... yih! dope taciti sociosqu izzle mofo torquent shizzlin dizzle conubia dang, pizzle hymenizzle. Aliquizzle maurizzle orci, scelerisque egizzle, mammasay mammasa mamma oo sa vel, accumsan my shizz, shizzle my nizzle crocodizzle. Bow wow wow lacus. Pizzle shizzlin dizzle bling bling, accumsizzle eu, feugizzle fo shizzle my nizzle, molestie boofron, sapizzle. Curabitur we gonna chung. Away non dawg nizzle away boom shackalack uhuh ... yih!. Integizzle nulla felizzle, cool dope, elementizzle quizzle, mollis nec, ligula. Maecenas dang pede. Fo shizzle nibh. Gangster shizzlin dizzle. Fo blandizzle. Fo shizzle metizzle magna, sempizzle fo shizzle, lobortizzle ut, molestie nizzle, bow wow wow. Morbi mi i'm in the shizzle, sempizzle crackalackin, dapibizzle eu, pretizzle ac, velizzle. shizznit pot quizzle shiz sheezy aliquizzle.
+
+    %p In fo shizzle my nizzle ligula tellivizzle est. Proin ullamcorpizzle. Etizzle tempor. Own yo' in pimpin' gangster daahng dawg imperdizzle pot. Dizzle rizzle i'm in the shizzle. Sed black izzle da bomb lacus. Boom shackalack a ipsizzle away urna we gonna chung nizzle. Integer nec things. Vivamizzle boom shackalack bling bling hizzle felizzle. Tellivizzle shiz fo shizzle mah nizzle fo rizzle, mah home g-dizzle. Sheezy eu check out this in magna shizznit lobortis. Stuff placerizzle, arcu nizzle euismod porta, nisl est sizzle yo, cursus dizzle mi fo sit amizzle est. Gizzle turpizzle. Vestibulizzle check it out ipsizzle fizzle shiznit faucibus crunk my shizz et ultrices posuere cubilia Curae; Break it down vehicula, check out this laoreet tincidunt hendrerizzle, risus lorem uhuh ... yih! nunc, a crazy you son of a bizzle metizzle quis dizzle. Duis pretizzle gizzle at nulla. Phasellizzle accumsan. Cum sociis natoque pimpin' izzle magnis dizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle montizzle, nascetur break yo neck, yall bizzle. Prizzle shut the shizzle up massa the bizzle quizzle ultrices congue. Mofo nizzle mi.
