--- a/source/partials/_nav.html.haml
+++ b/source/partials/_nav.html.haml
@@ -2,13 +2,13 @@
   %div
     %h2
       %a
+        / = image_tag 'logo.svg', alt:'Gray Bike'
         = succeed "BIKE" do
           %span.dg GRAY
   %nav
     %a
-      %span WORK
+      %span Work
     %a
-      %span WORDS
-    %a
-      %span HIRE
-  %hr
+      %span Words
+    %a.hire
+      %span Hire
