small tweaks to landing page text

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -8,7 +8,7 @@ title: Gray Bike | Software & Design Consulting
 
     %section.type-system-slab.hero-text
 
-      %h1 Gray Bike is a small software consultancy based in San Francisco, California. We use technology to help small businesses, nonprofits, and startups improve.
+      %h1 Gray Bike is a small software consultancy based in San Francisco, California. We use technology to help small businesses, nonprofits, and startups grow.
     
 
       .find-out-more.text-center
