--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -12,6 +12,8 @@ article.landing {
         left: 10px;
         font-family: $sans-serif;
         color: $blue-b2;
+        font-weight: 600;
+        text-align: center;
     }
   }
 
