--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -11,7 +11,7 @@ title: Gray Bike | Software & Design Consulting
       %h1.fade-up Gray Bike is a small software consultancy based in San Francisco, California. We use technology to help small businesses, nonprofits, and startups grow.
     
 
-      .find-out-more.text-center
+      .find-out-more.text-center.fade-in.fade-up-delay
         %a{href: "#graybike-overview"}
           = image_tag 'icons/down-arrow-circle-outline.svg', alt: 'Find out more', class: 'outline'
           = image_tag 'icons/down-arrow-circle-filled.svg', alt: 'Find out more', class: 'filled'
