--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -47,7 +47,7 @@ article.landing {
   section.hero-text {
     position: relative;
     top: 50%;
-    transform: translateY(-50%);
+    @include transform(translateY(-50%));
     margin-top: -$navbar-height;
   }
   .description h1 {
